@@ -23,12 +23,12 @@ conky.config = {
 
 
   --Placement
-	alignment = 'top_right',
+	alignment = 'top_middle',
 	gap_x = 10,
 	gap_y = 50,
-	minimum_width = 250, 
-	minimum_height = 5,
-	maximum_width = 400,
+	minimum_width = 600, 
+	minimum_height = 300,
+	maximum_width = 600,
 
   --Graphical
 	border_inner_margin = 10, 					-- margin between border and text
