@@ -78,7 +78,7 @@ ${voffset 15}
 ${font Arial:size=20}${color Yellow}${alignc}N0CALL
 ${voffset -40}
 ${font Arial:bold:size=14}${color White}Gridsquare ${alignr}${color Yellow}${exec cat $HOME/bin/conky/Grid.txt}
-${font Arial:bold:size=14}${color White}Radio Freq ${alignr}${color Yellow}${execi 5 $HOME/bin/conky/get-freq}
+${font Arial:bold:size=14}${color White}Radio Freq ${alignr}${color Yellow}${exec cat $HOME/bin/conky/Freq.txt}
 ${color Yellow}LOCAL${alignr}ZULU
 ${font Arial:bold:size=14}${color White}${time %H:%M:%S}\
 ${alignr}${tztime Zulu %H:%M:%S}
